feat(admin): 添加商品管理功能模块
- 新增商品和商品分类的API接口实现
- 添加商品列表页面，支持搜索、筛选和分页功能
- 实现商品上下架、推荐状态管理功能
- 添加商品分类管理页面，支持分类的增删改查和排序
- 集成后端控制器和数据访问层实现
- 优化前端组件样式和交互体验